--- a/src/components/DialogCycling/DialogCycling.module.css
+++ b/src/components/DialogCycling/DialogCycling.module.css
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-block: 1rem;
   border-bottom: 1px solid var(--surface-1);
 }
 
