--- a/src/pages/Place/DrinkDialog.module.css
+++ b/src/pages/Place/DrinkDialog.module.css
@@ -8,9 +8,14 @@
 
 .root header {
   align-items: center;
+  background-color: var(--dialog-background-color);
+  border-block-end: var(--border-size-1) solid var(--surface-1);
   display: flex;
+  inset-block-start: 0;
   justify-content: space-between;
-  padding-inline: var(--dialog-padding-inline);
+  margin-block-end: calc(-1 * var(--dialog-gap));
+  position: sticky;
+  z-index: 1;
 }
 
 .root h3 {
